Alterar, Pesquisar e Excluir Livros

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="ISO-8859-1">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
@@ -15,7 +15,7 @@
         </header>
         <nav>
             <a href="cadlivros.html" target="centro">Cadastrar Livro</a>
-            <a href="listlivros.jsp" target="centro">Livros Disponíveis</a>
+            <a href="listlivros.jsp" target="centro">Livros DisponÃ­veis</a>
             <a href="altlivros.html" target="centro">Alterar Livro</a>
             <a href="pesqlivros.html" target="centro">Pesquisar Livro</a>
             <a href="exclivros.html" target="centro">Excluir Livro</a>
@@ -24,7 +24,7 @@
             <iframe src="apresentacao.html" frameborder="0" name="centro"></iframe>
         </main>
         <footer>
-            <p class="copyright"> Copyright © 2023 Kauan Feitoza Mendes</p>
+            <p class="copyright"> Copyright Â© 2023 Kauan Feitoza Mendes</p>
         </footer>
     </body>
 </html>
