--- a/web/cadlivros.html
+++ b/web/cadlivros.html
@@ -33,7 +33,7 @@
                 <input type="text" name="descricao" id="descricao" size="50" maxlength="2000"  required>
 
                 <label for="preco">Preço:</label>
-                <input type="number" step="0.5" name="preco" id="preco" required>
+                <input type="number" name="preco" id="preco" step=".01" required>
 
                 <input type="submit" value="Salvar">
             </form>
