--- a/web/pesqlivros.html
+++ b/web/pesqlivros.html
@@ -5,7 +5,7 @@
         <title>Consulta de produtos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="stylecarregalivro.css"/>
+        <link rel="stylesheet" href="stylecad.css"/>
     </head>
     <body>
         <main>
