--- a/web/apresentacao.html
+++ b/web/apresentacao.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="apresentacao.css">
     <title>apresentacao</title>
 </head>
 <body>
     <main>
-        <h1>OI</h1>
+        <h1>Biblioteca Senac</h1>
+        <p>Seus livros favoritos esperando por você!</p>
     </main>
 </body>
 </html>
