Atualização no Estilo

--- a/web/cadlivros.html
+++ b/web/cadlivros.html
@@ -14,8 +14,8 @@
         <div class="container">
             <h1>Cadastrar Livros</h1>
             <form method="post" action="salvar_livros.jsp">
-                <label for="codigo">Código:</label>
-                <input type="number" step="1" name="codigo" id="codigo" required>
+                <label for="isbn">ISBN:</label>
+                <input type="number" step="1" name="isbn" id="isbn" required>
                 
                 <label for="nome">Nome:</label>
                 <input type="text" name="nome" id="nome" size="50" maxlength="50" required>
